--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         </div>
     </div>
     <audio id="mainAudio" loop style="display: none;">
-        <source src="/home/cdot1984/Downloads/A-Sky-Full-Of-Stars.mp3" type="audio/mpeg">
+        <source src="A-Sky-Full-Of-Stars.mp3" type="audio/mpeg">
     </audio>
 
     <script>
